# notion-paper-summarizer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: __init__.py  main.py  summarizer.py
